<resources>
    <string name="app_name">CSMail</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_mail_box">CSMail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CSMail</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sent_to_trash">Sent to Trash!</string>
    <string name="sent_to_important">Sent to Important!</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_drafts">Drafts</string>
    <string name="menu_sent">Sent</string>
    <string name="menu_trash">Trash</string>
    <string name="menu_account">Manage Account</string>
    <string name="menu_important">Important</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_calendar">Calendar</string>
    <string name="Manage">Manage</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="compose">Compose</string>
    <string name="action_register">Create new account</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="welcome">"Welcome !"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Inbox">Inbox</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Sent">Sent</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Drafts">Drafts</string>

    <string name="Trash">Trash</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Important">Important</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
